crates/rome_formatter/tests/specs/prettier/typescript/declare/declare_class_fields.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: declare_class_fields.ts

---
# Input
```js
class B {p: number;}
class C extends B {declare p: 256 | 1000;}
class D {
  declare field = "field";
}
declare class D {
  field = "field";
}

```

# Output
```js
class B {
  p: number;
}
class C extends B {
  declare p: 256 | 1000;
}
class D {
  declare field = "field";
}
declare class D {
  field = "field";
}

```

# Errors
```
error[SyntaxError]: Abstract properties cannot have initializers
  ┌─ declare_class_fields.ts:4:3
  │
4 │   declare field = "field";
  │   ^^^^^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: Abstract properties cannot have initializers
  ┌─ declare_class_fields.ts:7:3
  │
7 │   field = "field";
  │   ^^^^^^^^^^^^^^^^


```


